# unified-compliance-platform

./: .env.example  .gitignore  Dockerfile  PRODUCTION_READY.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci-cd.yml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: Assessments.tsx  DPDP.tsx  Dashboard.tsx  Frameworks.tsx  Login.tsx  Register.tsx  Reports.tsx  Settings.tsx
src/: main.py
src/api/: __init__.py  assessments.py  auth.py  dpdpa.py  frameworks.py  health.py  reports.py
src/core/: celery.py  config.py  database.py  logging.py
src/models/: __init__.py  assessment.py  audit.py  user.py
src/schemas/: __init__.py  auth.py  dpdpa.py  framework.py
src/services/: auth.py
src/services/frameworks/: __init__.py  gdpr.py  hipaa.py  iso27001.py  soc2.py
src/services/tasks/: __init__.py
tests/: conftest.py
tests/unit/: test_compliance.py
